--- a/composer.json
+++ b/composer.json
@@ -32,10 +32,10 @@
         "ext-gmp": "*"
     },
     "require-dev": {
-        "phpstan/phpstan": "2.0.x-dev",
-        "phpunit/phpunit": "10.5.x-dev",
-        "squizlabs/php_codesniffer": "*",
-        "slevomat/coding-standard": "^8.0@dev"
+        "phpunit/phpunit": "^10.5",
+        "phpstan/phpstan": "^1.11",
+        "squizlabs/php_codesniffer": "^3.10",
+        "slevomat/coding-standard": "^8.15"
     },
     "config": {
         "allow-plugins": {
