--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "multiplechain/utils",
-    "version": "0.1.2",
+    "version": "0.1.3",
     "description": "MultipleChain Utils",
     "type": "library",
     "license": "MIT",
@@ -29,7 +29,8 @@
     "require": {
         "ext-mbstring": "*",
         "ext-bcmath": "*",
-        "ext-gmp": "*"
+        "ext-gmp": "*",
+        "phpseclib/phpseclib": "~2.0.30"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.5",
